--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -14,11 +14,11 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:orientation="vertical"
-        android:layout_marginBottom="70dp">
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="5dp">
 
         <LinearLayout
             android:orientation="vertical"
-            android:weightSum="10"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -405,7 +405,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="1"
         android:gravity="bottom">
 
         <Button
@@ -414,7 +413,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/rectanglebutton"
             android:fontFamily="@font/robotoregular"
             android:text="Chat dengan ahli pakan"
