--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -21,9 +23,9 @@
                 android:layout_height="match_parent"
                 android:text="LOGO"
                 android:fontFamily="@font/robotobold"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:layout_weight="8"
-                android:layout_margin="10dp"/>
+                android:layout_marginTop="5dp"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -35,8 +37,7 @@
                 android:drawablePadding="10dp"
                 android:textSize="14dp"
                 android:hint="Tulis apapun untuk mencari"
-                android:background="#FFF"
-                android:layout_margin="10dp"/>
+                android:background="#FFF"/>
 
 
 
