--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,131 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-android:background="@color/background">
-
-<ScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@+id/toolbar2"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
     android:orientation="vertical"
-    android:layout_marginBottom="70dp">
+    android:background="@color/background">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:weightSum="10"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/rectangle"
-            app:cardCornerRadius="7dp"
-            app:cardElevation="5dp"
-            app:cardUseCompatPadding="true"
-            android:layout_marginLeft="11dp"
-            android:layout_marginRight="11dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    >
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/minicircle" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:layout_marginLeft="25dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="Nama Ahli"
-                            android:textSize="18dp"
-                            android:fontFamily="@font/robotobold"
-                            android:gravity="right" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Ahli Pakan Sapi"
-                            android:fontFamily="@font/robotoregular"
-                            android:textStyle="bold"
-                            android:gravity="right" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Depok, Jawa Barat"
-                            android:fontFamily="@font/robotitalic"
-                            android:textStyle="bold"
-                            android:gravity="right" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Rp. 500.000"
-                            android:fontFamily="@font/robotobold"
-                            android:textStyle="bold"
-                            android:textSize="20dp"
-                            android:textColor="#853D25"
-                            android:layout_marginTop="15dp"
-                            android:gravity="right" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fontFamily="@font/robotobold"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="5dp"
-        android:text="Materi Pelatihan"
-        android:textSize="14dp" />
+        android:layout_below="@+id/toolbar2"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="5dp">
 
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:fontFamily="@font/robotoregular"
-            android:background="@drawable/rectangle_textarea"
-            android:paddingBottom="30dp"
-            android:paddingLeft="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:hint="Tulis materi pelatihan yang diinginkan"
-            android:textSize="12dp" />
+            android:layout_height="match_parent">
 
-        <TextView
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/rectangle"
+                app:cardCornerRadius="7dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="11dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    >
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        >
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/minicircle" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:layout_marginLeft="25dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:text="Nama Ahli"
+                                android:textSize="18dp"
+                                android:fontFamily="@font/robotobold"
+                                android:gravity="right" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="Ahli Pakan Sapi"
+                                android:fontFamily="@font/robotoregular"
+                                android:textStyle="bold"
+                                android:gravity="right" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="Depok, Jawa Barat"
+                                android:fontFamily="@font/robotitalic"
+                                android:textStyle="bold"
+                                android:gravity="right" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="Rp. 500.000"
+                                android:fontFamily="@font/robotobold"
+                                android:textStyle="bold"
+                                android:textSize="20dp"
+                                android:textColor="#853D25"
+                                android:layout_marginTop="15dp"
+                                android:gravity="right" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/robotobold"
@@ -133,87 +109,105 @@ android:background="@color/background">
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:text="Tanggal Pelatihan"
+            android:text="Materi Pelatihan"
             android:textSize="14dp" />
 
-        <EditText
-            android:id="@+id/dateText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
-            android:background="@drawable/rectangle_textarea"
-            android:padding="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:hint="dd/mm/yy"
-            android:textSize="12dp"
-            android:clickable="true"
-            android:editable="false"
-            android:focusable="false"
-            android:inputType="date" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:fontFamily="@font/robotoregular"
+                android:background="@drawable/rectangle_textarea"
+                android:paddingBottom="30dp"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="5dp"
+                android:hint="Tulis materi pelatihan yang diinginkan"
+                android:textSize="12dp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/robotobold"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp"
-            android:text="Alamat Lengkap"
-            android:textSize="14dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/robotobold"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:text="Tanggal Pelatihan"
+                android:textSize="14dp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:fontFamily="@font/robotoregular"
-            android:background="@drawable/rectangle_textarea"
-            android:paddingBottom="30dp"
-            android:paddingLeft="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:hint="Tulis alamat lengkap"
-            android:textSize="12dp" />
+            <EditText
+                android:id="@+id/dateText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/robotoregular"
+                android:background="@drawable/rectangle_textarea"
+                android:padding="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="5dp"
+                android:hint="dd/mm/yy"
+                android:textSize="12dp"
+                android:clickable="true"
+                android:editable="false"
+                android:focusable="false"
+                android:inputType="date" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/robotobold"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp"
-            android:text="Nomor Handphone"
-            android:textSize="14dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/robotobold"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:text="Alamat Lengkap"
+                android:textSize="14dp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
-            android:background="@drawable/rectangle_textarea"
-            android:padding="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:hint="0856xxxxxxx"
-            android:textSize="12dp" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:fontFamily="@font/robotoregular"
+                android:background="@drawable/rectangle_textarea"
+                android:paddingBottom="30dp"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="5dp"
+                android:hint="Tulis alamat lengkap"
+                android:textSize="12dp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/robotobold"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:text="Nomor Handphone"
+                android:textSize="14dp" />
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/robotoregular"
+                android:background="@drawable/rectangle_textarea"
+                android:padding="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="5dp"
+                android:hint="0856xxxxxxx"
+                android:textSize="12dp" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-
-
-
-</ScrollView>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="1"
         android:gravity="bottom">
 
         <Button
@@ -222,7 +216,7 @@ android:background="@color/background">
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/rectanglebutton"
             android:fontFamily="@font/robotoregular"
             android:text="DAFTAR PELATIHAN"
