--- a/app/src/main/res/layout/activity_ubah_data_diri.xml
+++ b/app/src/main/res/layout/activity_ubah_data_diri.xml
@@ -7,21 +7,20 @@
     android:orientation="vertical"
     android:background="@color/background">
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar2"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:orientation="vertical"
-            android:weightSum="10"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="60dp">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
