--- a/app/src/main/res/drawable/littlecircle.xml
+++ b/app/src/main/res/drawable/littlecircle.xml
@@ -6,4 +6,5 @@
             <size android:height="100dp" android:width="100dp" />
         </shape>
     </item>
+    <item android:drawable="@drawable/minicircle" />
 </selector>
