--- a/app/src/main/res/layout/activity_pesanan.xml
+++ b/app/src/main/res/layout/activity_pesanan.xml
@@ -286,7 +286,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
-                            android:paddingLeft="10dp">
+                            android:paddingLeft="10dp"
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/selesai"
