--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/circle"
+                android:id="@+id/imageRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -35,7 +35,7 @@
                 android:id="@+id/nama1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/circle"
+                android:layout_below="@+id/imageRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -43,7 +43,7 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/nama2"
+                android:id="@+id/namaRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/nama1"
@@ -58,7 +58,7 @@
                 android:id="@+id/email1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/nama2"
+                android:layout_below="@+id/namaRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -66,7 +66,7 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/email2"
+                android:id="@+id/emailRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/email1"
@@ -81,7 +81,7 @@
                 android:id="@+id/username1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/email2"
+                android:layout_below="@+id/emailRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -89,7 +89,7 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/username2"
+                android:id="@+id/usernameRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/username1"
@@ -105,7 +105,7 @@
                 android:id="@+id/password1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/username2"
+                android:layout_below="@+id/usernameRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -113,7 +113,7 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/password2"
+                android:id="@+id/passwordRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/password1"
@@ -129,7 +129,7 @@
                 android:id="@+id/confirm1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/password2"
+                android:layout_below="@+id/passwordRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -137,7 +137,7 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/confirm2"
+                android:id="@+id/passwordConfirmRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/confirm1"
@@ -153,7 +153,7 @@
                 android:id="@+id/alamat1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/confirm2"
+                android:layout_below="@+id/passwordConfirmRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -161,7 +161,7 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/alamat2"
+                android:id="@+id/alamatRegister"
                 android:layout_width="match_parent"
                 android:layout_height="118dp"
                 android:layout_below="@+id/alamat1"
@@ -169,13 +169,15 @@
                 android:fontFamily="@font/robotoregular"
                 android:textSize="12dp"
                 android:background="@drawable/bordercolor"
-                android:padding="8dp"/>
+                android:paddingLeft="8dp"
+                android:paddingTop="1dp"
+                android:paddingBottom="1dp"/>
 
             <TextView
                 android:id="@+id/hp1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/alamat2"
+                android:layout_below="@+id/alamatRegister"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="14dp"
@@ -183,21 +185,31 @@
                 android:textColor="@color/recButton" />
 
             <EditText
-                android:id="@+id/hp2"
+                android:id="@+id/phoneRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/hp1"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/robotoregular"
                 android:textSize="12dp"
+                android:hint="example: 081276765454"
                 android:background="@drawable/bordercolor"
                 android:padding="8dp"/>
 
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:visibility="gone"
+                android:layout_below="@id/phoneRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <Button
-                android:id="@+id/masuk"
+                android:id="@+id/register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/hp2"
+                android:layout_below="@id/phoneRegister"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/rectanglebutton"
                 android:fontFamily="@font/robotoregular"
