--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,12 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#D1E2C4</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#853D25</color>
     <color name="circle">#D1E2C4</color>
     <color name="background">#F0F3EE</color>
     <color name="rectangle">#FFFFFF</color>
     <color name="recButton">#555424</color>
     <color name="twoh_primary">#FFFFFF</color>
     <color name="colorNavigationText">#FFFFFF</color>
+    <color name="black">#000</color>
 </resources>
